[package]
name = "bve-plugin-multiplexer"
version = "0.1.0"
authors = ["BVE Workshop <bveworkshop@gmail.com>", "WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pluginmultiplexer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi"] }
